# Decimal

./: CMakeLists.txt  README.md
include/: decimal.h
src/: decimal.cpp
tests/: unit_tests.cpp
